# dkim010.github.io

./: .gitignore  404.html  Makefile  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml  latex.yml
blog/: index.html
blog/2023/distributed-keyvalue-store/: index.html
blog/2023/kubernetes/: index.html
blog/2023/rust-1/: index.html
blog/archive/2023/: index.html
blog/category/database/: index.html
blog/category/distributed/: index.html
blog/category/kubernetes/: index.html
blog/category/nosql/: index.html
blog/category/rust/: index.html
blog/posts/2023/distributed-kv/: index.html
blog/posts/2023/kube/: index.html
blog/posts/2023/rust/: index.html
docs/: index.md
docs/blog/posts/2023/: distributed-kv.md  kube.md  rust.md
docs/oldcv/stylesheets/: styles.css
latex/: Dockerfile  awesome-cv.cls  resume.tex
latex/201810/: experience.tex  publication.tex
latex/201902/: experience.tex
latex/201908/: experience.tex  summary.tex
latex/202310/: experience.tex  summary.tex
latex/sections/: education.tex  publication.tex
latex/src/: main.tex
latex/src/deprecated/201810/: summary.tex
latex/src/deprecated/201902/: summary.tex
latex/src/deprecated/202001/: experience.tex
latex/src/deprecated/202110/: experience.tex  summary.tex
latex/src/deprecated/common/: education.tex
latex/src/latest/: experience.tex  publication.tex  summary.tex
latex/src/sections/: experience.tex  summary.tex
overrides/partials/: post.html
search/: search_index.json
stylesheets/: styles.css
