[project]
name = "dkim010-github-io"
version = "0.1.0"
description = ""
authors = [{ name = "Dongwon Kim", email = "dkim010@gmail.com" }]
requires-python = "~=3.12.0"
readme = "README.md"
dependencies = [
    "mkdocs-material>=9.4.2,<10",
    "mkdocs-section-index>=0.3.8,<0.4",
    "mkdocs-literate-nav>=0.6.1,<0.7",
    "mkdocs-glightbox>=0.3.4,<0.4",
    "mkdocstrings>=0.23.0,<0.24",
    "mkdocs-pdf>=0.1.2,<0.2",
]

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[tool.setuptools]
py-modules = []
